--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -31,7 +31,7 @@
           src="assets/images/close.svg"
         />{{ "search" | translate }}
       </div>
-      <div class="add_feild" (click)="createNewRule()">
+      <div class="add_feild" (click)="createNewRule()" *ngIf=" rules && rules.length">
         <img src="assets/icons/add_plus.svg" />{{
           "businessRules.add_rule" | translate
         }}
@@ -48,6 +48,21 @@
     <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
     <span class="please-wait-message">Please Wait!</span>
   </div>
+  <div  class="empty-landing-screen"
+  *ngIf="!loadingContent && !(rules && rules.length)">
+    <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" src="assets/images/businessrules-empty.svg"></div>
+    <ng-container >
+        <div class="empty-title">You haven’t added any rules yet!</div>
+        <div class="desc-text"> Rule is powerful tool to personalize and fine-tue search results. Search Assistant allows you to define rules based on Search , Page and User-contexts. Rules can be used for merchandising and promotions. 
+        </div>
+        <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'">                                         
+            <button class="kr-sg-button-primary" (click)="createNewRule()">Add Rule</button>                                            
+        </div>
+    </ng-container>
+    <ng-container *ngIf="noItems && emptySearchResults">
+        <div class="desc-text">Your Search Query doesn't match with any record.</div>
+    </ng-container>
+</div>
   <div class="table_section" *ngIf="!loadingContent && rules && rules.length">
     <div class="header_sec row m-0">
       <div class="col-3 content withcheckbox">
@@ -148,7 +163,7 @@
 <kr-modal  modalType="center" #addBusinessRules modalClass="modal_popups_ business-rules-popup">
 
   <div class="modal-header">
-    <div class="title font-weight-bold">{{ "businessRules.add_rule" | translate }}</div>
+    <div class="title font-weight-bold" >{{ "businessRules.add_rule" | translate }}</div>
     <label class="kr-sg-toggle toggle-switch">
       <input type="checkbox" [(ngModel)]="addEditRuleObj.isRuleActive" />
       <div class="slider">
