--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -1292,3 +1292,164 @@
         }
     }
 }
+.table-list-content{
+    .kr-sg-data-table{
+        .table-action-header{
+            justify-content: space-between;
+            height: auto;
+            background: #F8F9FA;
+            padding: 5px 20px 5px 5px;
+            border-radius: 4px; 
+            margin: 0 15px 0 10px;               
+            .kr-sg-input-search{
+                width: 300px;
+                input{
+                    padding-left: 34px;
+                    padding-right: 10px;
+                }
+                .search-icon{
+                    left: 10px;
+                    width: 16px;
+                    height: 16px;
+                }
+             } 
+            .kr-sg-dropdowns{
+                width: 124px;
+                margin-left: 15px;
+                .dropdown-open{
+                    &.show{
+                        background: #fff;
+                        .dropdown-input{
+                            border: 1px solid #E4E5E7;
+                        }
+                    }
+                    .dropdown-input{
+                        font-size: 12px;
+                        padding: 0 15px;
+                        border: 1px solid transparent;
+                        background: transparent;
+                        border-radius: 4px;
+                        font-weight: 500;
+                        img{
+                            margin-right: 6px;
+                            position: relative;
+                            top: -1px;
+                        }
+                        &::before{
+                            display: none;
+                        }
+                        &::after{
+                            display: none;
+                        }
+                    }
+                    .content-menu{
+                        box-shadow: 0px 10px 35px rgba(32, 33, 36, 0.2);
+                        width: 140px;
+                        top: 3px !important;
+                        min-width: 140px;
+                        padding: 10px 20px;
+                        li{
+                            font-size: 13px;
+                            color: #202124;
+                            padding: 8px 0;
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+            .grid-list-view-table{
+                margin-left: 15px;
+                cursor: pointer;
+                width: 20px;
+                text-align: right;
+            }
+        }  
+        .table-content{
+            margin-top: 25px;      
+            padding: 0 15px 0 10px;          
+            .table-header{
+                background: #fff;
+                border-bottom: 1px solid #E4E5E7;
+                color: #9AA0A6;
+                .col_{
+                    font-weight: 500;                       
+                    color: #9AA0A6;
+                    font-size: 12px;   
+                    cursor: pointer;         
+                    .sortImg{                                                       
+                        position: static;
+                        &.upArrow {
+                            transform: none !important;
+                        }
+                        &.downArrow {
+                            transform: rotate(180deg) !important;
+                            top: -1px !important;
+                            position: relative;
+                        }
+                        &.assending{
+                            transform: rotate(180deg);
+                        }
+                        &.decending{
+                            transform: rotate(0deg);
+                        }
+                    }            
+                }
+            }
+            .col{
+                .action_icon{                        
+                    cursor: pointer;
+                    visibility: hidden;
+                }
+            }
+            .dropdown-toggle{
+                .custom-dropdown-toggle-icon {
+                    margin-left: 10px !important;
+                }
+            }
+            .content-body{
+                padding: 9px 0;
+                border-bottom: 1px solid #E4E5E7;
+                .col{
+                    color: #202124;
+                    font-size: 14px;
+                    &.success{
+                        color: #28A745;
+                    }
+                    &.in-progress{
+                        color: #0D6EFD;
+                    }
+                    &.failed{
+                        color: #DD3646;
+                    }
+                }
+                .inProgress{
+                    width: 20px;
+                    height: 20px;
+                    -webkit-animation:spin 4s linear infinite;
+                    -moz-animation:spin 4s linear infinite;
+                    animation:spin 4s linear infinite;
+                }
+                &:hover{
+                    background: #F8F9FA;
+                    .action_icon{
+                        visibility: visible;
+                    }
+                }
+                .ml-2{
+                    margin-left: 2%;
+                }
+                .sch-createdOn{
+                    color: #9AA0A6;
+                    font-weight: normal;
+                    font-size: 12px;
+                }
+            }
+        }                     
+    }
+    .table-scroll-perfect{
+        height: calc(100vh - 214px);
+        &.list{
+            height: calc(100vh - 136px);
+        }
+    }
+}
