--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -587,3 +587,71 @@
     height: 80% !important;
   }
 }
+::ng-deep.add_Field_ModalPop{
+  .modal-dialog{
+    height: 478px !important;
+    width: 982px;
+    max-width: 982px !important;
+    .modal-content{
+      background: #FFFFFF;
+      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+      border-radius: 8px !important;
+      .table-sec-data{
+        .header-table{
+          padding: 15px 0;
+          align-items: center;
+          box-shadow: inset 0px -1px 0px #E4E5E7;
+          .title{
+            color: #9AA0A6;
+            text-transform: uppercase;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 14px;
+            .checkbox-custom-label{
+              color: #9AA0A6;
+              text-transform: uppercase;
+              font-weight: 500;
+              font-size: 12px;
+              line-height: 14px;
+            }
+          }
+        }
+        .body-sec{
+          padding: 15px 0;
+          align-items: center;
+          box-shadow: inset 0px -1px 0px #E4E5E7;
+          .title{
+            color: #202124;     
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 14px;
+            .checkbox-custom-label{
+              color: #202124;     
+              font-weight: normal;
+              font-size: 14px;
+              line-height: 14px;
+            }
+          }
+        }
+        .kr-sg-checkbox {
+          .checkbox-custom-label{
+            &::before{
+              margin-top: 0 !important;
+              background-color: #E4E5E7;
+            }
+          }  
+          .checkbox-custom{
+            height: auto !important; 
+            &:checked{
+              + .checkbox-custom-label{
+                &::before{
+                  background-color: #0D6EFD !important;
+                }
+              }
+            }           
+          }                  
+        }
+      }
+    }
+  }
+}
