--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -2024,3 +2024,45 @@ nouislider{
         padding: 0 !important;
     }
 }
+.empty-landing-screen{
+    width: 606px;
+    margin: 0 auto;
+    padding: 42px 0 40px 0;
+    text-align: center;
+    .img-block{
+
+    }
+    .empty-title{
+        color: #202124;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 20px;
+        margin: 10px 0;
+    }
+    .desc-text{
+        color: #5F6368;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 20px;
+    }    
+    .kr-sg-dropdowns{
+        width: 128px;
+        margin: 20px auto;
+        .dropdown-open {
+            .dropdown-input{
+                background: #0D6EFD;
+                border-radius: 4px;
+                border: 0;
+                font-weight: normal;
+                font-size: 14px;
+                line-height: 20px;
+                color: #FFFFFF;
+                text-align: center;
+                &::before{
+                    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAGCAYAAAD68A/GAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABgSURBVHgBfY7RDYAgDETbxH8dgRFwBDdwAxzBDR1BN9ANHKHcJeWHAE0eNHcvBDGzG+zSGXZ0uETwg9SQknexBJRfcPakiYeqPgg2rBfu2d0DrOi+1n+Cv0yCjMblpc4zGr9VeEmH2SQAAAAASUVORK5CYII=');
+                    background-size: auto;
+                }
+            }
+        }
+    }
+}
