FLY-1259 bug fixed

--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -156,7 +156,7 @@
           <div class="top-cards-section row m-0">
             <div class="col cards-data">
               <div class="content">
-                  <div class="title-info">Total Users<img src="assets/icons/gray_info.svg" class="pl-1"></div>
+                  <div class="title-info">Total Users in {{current_month}}<img src="assets/icons/gray_info.svg" class="pl-1"></div>
                   <div class="bottom-sec">
                       <div class="left-sec">
                           <div class="count">{{ totalUsersStats.totalUsers}}</div>
@@ -194,7 +194,7 @@
         </div>
         <div class="col cards-data">
           <div class="content">
-              <div class="title-info">Result Rate<img src="assets/icons/gray_info.svg" class="pl-1"></div>
+              <div class="title-info">Result Rate for {{current_month}}<img src="assets/icons/gray_info.svg" class="pl-1"></div>
               <div class="bottom-sec">
                   <div class="left-sec">
                       <div class="count">{{totalSearchesStats.resultRate }}%</div>
