--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.html
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.html
@@ -104,9 +104,9 @@
                             <!-- <ng5-slider [(value)]="durationRange1" [(highValue)]="durationRange2" [options]="durationOptions" class="double_slider slider1" (userChangeEnd)="onUserChangeEnd('duration', $event, 'slider1')" (userChange)="onUserChange($event, 'slider1', true)"></ng5-slider> -->
                             <div class="row m-0 bottom-row col-12 ">
                                 <div class="slider-sec col-6 p-0">
-                                    <span>00</span>
+                                    <!-- <span>00</span> -->
                                     <ng5-slider class = "col-3" [(value)]="durationRange1" [(highValue)]="durationRange2" [options]="durationOptions" class="double_slider slider1" (userChangeEnd)="onUserChangeEnd('duration', $event, 'slider1')" (userChange)="onUserChange($event, 'slider1', true)"></ng5-slider>
-                                    <span>24</span>
+                                    <!-- <span>24</span> -->
                                 </div>
                                 <div class="legend-sec col-6 p-0">
                                     <div class="title">{{'metrics.user_engagement.Volume_Of_Users'| translate}}</div>
