Fix for FLY-1227, FLY-1242, FLY-1214 - Related to StatusDocker.
(cherry picked from commit ced11b48dbe857deb9724989325025ea40d43e08)

--- a/findly-builder/src/app/app.component.html
+++ b/findly-builder/src/app/app.component.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <div class="krFindlyAppComponent">
-    <div *ngIf="!loading">
+    <div *ngIf="!loading" (click)="globalHandler($event)">
         <app-header (showMenu)="showMenu($event)" (settingMenu)="settingMenu($event)"></app-header>
         <app-mainmenu [show]="showMainMenu" [settingMainMenu]="settingMainMenu" class="toShowAppHeader"></app-mainmenu>
         <app-body (initSearchSDK)="initSearchSDK()" (closeResultBody)="closeResultBody($event)" [query]="queryText"
