--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -2003,7 +2003,7 @@ nouislider{
     }
 
 }
-.imort-structure-data{
+.import-structure-data{
     .modal-dialog{
         width: 784px !important;
         height: 550px !important;
@@ -2015,6 +2015,87 @@ nouislider{
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1) !important;
             border-radius: 8px !important;
 
+        }
+    }
+    .advance-search-modal{
+        .dopdown-with-search{
+            &.kr-sg-dropdowns{
+                .dropdown-open {
+                    .dropdown-input{
+                        &::before{
+                            display: none !important;
+                        }
+                    }
+                }
+                .kr-sg-input-inline-search{
+                    .search-with-dropdown{
+                        position: absolute;
+                        border: 0;
+                    }
+                    input{
+                        height: 34px;
+                        padding-left: 10px;
+                        padding-right: 30px;                        
+                    }
+                    .search-icon{
+                        top: 10px;
+                        width: auto;
+                        height: auto;
+                        left: auto;
+                        right: 8px;
+                    }
+                }                            
+                ul{             
+                    li{
+                        position: relative;                                                                                                      
+                    }
+                }           
+            }                
+        }
+        .kr-sg-radiobutton {
+            .radio-custom{
+                &:checked{
+                    &:disabled {
+                        + .radio-custom-label{
+                            color: #202124;
+                            cursor: default;
+                            &::before{
+                                border: solid 1px #BDC1C6;
+                                box-shadow: inset 0 0 0 3px #f8f9fa;
+                                background-color: #BDC1C6;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .mr-10{
+            margin-right: 10px;
+        }
+        .delete-row{
+            margin-left: 15px;
+        }
+        .add-rule{
+            color: #202124;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 20px;
+            align-items: center;
+            display: inline-flex;
+            cursor: pointer;
+            img{
+                margin-right: 8px;
+            }
+        }
+        .kr-sg-input-text {
+            input{
+                &:disabled{
+                    border: solid 1px transparent;
+                    color: #9B9B9B;
+                    background: #EFF0F1;
+                    border-radius: 4px;
+                }
+            }
         }
     }
 }
@@ -2031,9 +2112,14 @@ nouislider{
 .CodeMirror-lines{
     padding: 0;
 }
-// .CodeMirror-sizer{
-//     margin-left: 37px !important;
-// }
+.structured-data{
+    .CodeMirror-sizer{
+        margin-left: 20px !important;
+        .CodeMirror-gutter-wrapper{
+            left: -35px !important;
+        }
+    }
+}
 .experiment-container{
     .table-data-content {
         .acc-card {
